added lexer rules

--- a/src/Lexer/README
+++ b/src/Lexer/README
@@ -1,7 +1,5 @@
-README file for Programming Assignment 2 (C++ edition)
-=====================================================
 
-Your directory should contain the following files:
+This directory contains:
 
  Makefile
  README
@@ -15,22 +13,14 @@ Your directory should contain the following files:
  *.d             dependency files
  *.*             other generated files
 
-The include (.h) files for this assignment can be found in 
-[cool root]/PA2
 
 	The Makefile contains targets for compiling and running your
 	program. DO NOT MODIFY.
 
-	The README contains this info. Part of the assignment is to fill
-	the README with the write-up for your project. You should
-	explain design decisions, explain why your code is correct, and
-	why your test cases are adequate. It is part of the assignment
-	to clearly and concisely explain things in text as well as to
-	comment your code. Just edit this file.
+	The README contains this info. 
 
-	cool.flex is a skeleton file for the specification of the
-	lexical analyzer. You should complete it with your regular
-	expressions, patterns and actions. 
+	cool.flex is the specification file of the
+	lexical analyzer.
 
 	test.cl is a COOL program that you can test the lexical
 	analyzer on. It contains some errors, so it won't compile with
@@ -101,8 +91,4 @@ Instructions
 
 	GOOD LUCK!
 
----8<------8<------8<------8<---cut here---8<------8<------8<------8<---
-
-Write-up for PA2
-----------------
 
