--- a/src/CodeGenerator/README
+++ b/src/CodeGenerator/README
@@ -1,40 +1,29 @@
-README file for Programming Assignment 5  (C++ edition)
-=======================================================
-
-Your directory should now contain the following files:
+Directory contents:
 
  Makefile
  README
- ast-lex.cc	      -> [cool root]/src/PA5/ast-lex.cc
- ast-parse.cc	      -> [cool root]/src/PA5/ast-parse.cc
- cgen-phase.cc	      -> [cool root]/src/PA5/cgen-phase.cc
+ ast-lex.cc	     
+ ast-parse.cc	      
+ cgen-phase.cc	      
  cgen.cc
  cgen.h
  cgen_supp.cc
- cool-tree.cc	      -> [cool root]/src/PA5/cool-tree.cc
+ cool-tree.cc	      
  cool-tree.handcode.h
- dumptype.cc	      -> [cool root]/src/PA5/dumptype.cc
+ dumptype.cc	     
  emit.h
  example.cl
- handle_flags.cc      -> [cool root]/src/PA5/handle_flags.cc
- mycoolc	      -> [cool root]/src/PA5/mycoolc*
- stringtab.cc	      -> [cool root]/src/PA5/stringtab.cc
- tree.cc	      -> [cool root]/src/PA5/tree.cc
- utilities.cc	      -> [cool root]/src/PA5/utilities.cc
+ handle_flags.cc      
+ mycoolc	      
+ stringtab.cc	      
+ tree.cc	     
+ utilities.cc	      
  *.d
 
 The include (.h) files for this assignment can be found in 
 [cool root]/include/PA5
 
-	The Makefile contains targets for compiling and running your
-	program, as well as handing it in. DO NOT MODIFY.
-
-	The README contains this info. Part of the assignment is to
-	fill the README with the write-up for your project. You should
-	explain design decisions, explain why your code is correct,
-	and why your test cases are adequate. It is part of the
-	assignment to clearly and concisely explain things in text as
-	well as to comment your code. Just edit this file.
+	The README contains this info.
 
 	In example.cl you should write a correct Cool program which
 	tests as many aspects of the code generator as possible. It
@@ -144,11 +133,4 @@ Instructions
 	when you switch from one type of machine to the other.  If at
 	some point you get weird errors from the linker, you probably
 	forgot this step.
-
-	GOOD LUCK!
-
----8<------8<------8<------8<---cut here---8<------8<------8<------8<---
-
-Write-up for PA5
-----------------
 
